backend/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config:
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match: 
                    prefix: /
                  route: 
                    cluster: echo_service
                    cors:
                      allow_credentials: true
                      allow_origin_string_match:
                        - exact: http://localhost:3000
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      max_age: "1728000"
                      expose_headers: custom-header-1,grpc-status,grpc-message
                      allow_headers: authorization, keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
            http_filters:
            - name: envoy.grpc_web
            - name: envoy.cors
            - name: envoy.router
  clusters:
    - name: echo_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts: [{ socket_address: { address: localhost, port_value: 9090 }}]
    - name: auth0_cluster
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 2s
      lb_policy: ROUND_ROBIN
      hosts:
      - socket_address:
          address: dev-ag9zx3un.auth0.com
          port_value: 443
